add: progress quiz bar

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                          xmlns:xlink="http://www.w3.org/1999/xlink">
                         <defs>
                             <path d="M6,114a108,108 0 1,0 216,0a108,108 0 1,0 -216,0" id="textcircle"/>
-<!--                            Вынести стили в css-->
+                            <!--                            Вынести стили в css-->
                             <style>
                                 text {
                                     font-size: 12px;
@@ -69,92 +69,92 @@
     </header>
     <section class="about">
         <span class="about-label">ЭкоДом</span>
-<!--        <div class="tab-wrapper">-->
-            <div class="about-tabs">
+        <!--        <div class="tab-wrapper">-->
+        <div class="about-tabs">
+            <ul>
+                <li class="about-tabs__tab active" data-id="1">О компании</li>
+                <li class="about-tabs__tab" data-id="2">Руководство</li>
+                <li class="about-tabs__tab" data-id="3">Почему мы?</li>
+            </ul>
+        </div>
+        <div class="about-content active">
+            <div class="about-content__about-title">Липецкая компания "ЭкоДом"</div>
+            <div class="about-content__about-description">
+                <img class="about-content__about-video" src="src/image/video/video.png" alt="video house">
+                <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,
+                    так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.
+                </p>
+                <p>
+                    работает в сфере строительства уже более 13 лет. На данный момент более 500 семей стали
+                    обладателями
+                    собственных домов благодаря нашей компании. За это время у нас накопился значительный опыт в
+                    работе
+                    эффективного и надежного строительства домов, что вызывает доверие у наших текущих и будущих
+                    клиентов.
+                </p>
+            </div>
+        </div>
+        <div class="about-content">
+            <img class="about-content__author-photo" src="src/image/author/Evgeny.png" alt="author">
+            <div class="about-content__author-description">
+                <div class="about-content__author-title">Здравствуйте, меня зовут Евгений Халипа</div>
+                <p>Я, как руководитель отдела, гарантирую вам, что ваш дом будет построен качественно, в срок.
+                </p>
+            </div>
+        </div>
+        <div class="about-content">
+            <div class="about-content__why-description">
+                <img class="about-content__why-photo" src="src/image/author/why.png" alt="why us?">
                 <ul>
-                    <li class="about-tabs__tab active" data-id="1">О компании</li>
-                    <li class="about-tabs__tab" data-id="2">Руководство</li>
-                    <li class="about-tabs__tab" data-id="3">Почему мы?</li>
+                    <li>Отработаны процессы и накоплен огромный опыт.</li>
+                    <li>Строим под ключ: от гео-изысканий участка до ландшафтных работ.</li>
+                    <li>Благодаря комплексному подходу с нами спокойно.</li>
+                    <li>Мы всегда дорабатываем проект дома под выбранный участок и потребности каждого из будущих
+                        жильцов.
+                    </li>
+                    <li>Строгое соблюдение ГОСТ, СНиП.</li>
+                    <li>Полный цикл — от лесозаготовки до готового дома под ключ.</li>
                 </ul>
             </div>
-            <div class="about-content active">
-                <div class="about-content__about-title">Липецкая компания "ЭкоДом"</div>
-                <div class="about-content__about-description">
-                    <img class="about-content__about-video" src="src/image/video/video.png" alt="video house">
-                    <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,
-                        так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.
-                    </p>
-                    <p>
-                        работает в сфере строительства уже более 13 лет. На данный момент более 500 семей стали
-                        обладателями
-                        собственных домов благодаря нашей компании. За это время у нас накопился значительный опыт в
-                        работе
-                        эффективного и надежного строительства домов, что вызывает доверие у наших текущих и будущих
-                        клиентов.
-                    </p>
-                </div>
-            </div>
-            <div class="about-content">
-                <img class="about-content__author-photo" src="src/image/author/Evgeny.png" alt="author">
-                <div class="about-content__author-description">
-                    <div class="about-content__author-title">Здравствуйте, меня зовут Евгений Халипа</div>
-                    <p>Я, как руководитель отдела, гарантирую вам, что ваш дом будет построен качественно, в срок.
-                    </p>
-                </div>
-            </div>
-            <div class="about-content">
-                <div class="about-content__why-description">
-                    <img class="about-content__why-photo" src="src/image/author/why.png" alt="why us?">
-                    <ul>
-                        <li>Отработаны процессы и накоплен огромный опыт.</li>
-                        <li>Строим под ключ: от гео-изысканий участка до ландшафтных работ.</li>
-                        <li>Благодаря комплексному подходу с нами спокойно.</li>
-                        <li>Мы всегда дорабатываем проект дома под выбранный участок и потребности каждого из будущих
-                            жильцов.
-                        </li>
-                        <li>Строгое соблюдение ГОСТ, СНиП.</li>
-                        <li>Полный цикл — от лесозаготовки до готового дома под ключ.</li>
-                    </ul>
-                </div>
-            </div>
-<!--        </div>-->
+        </div>
+        <!--        </div>-->
     </section>
     <!--    ADVANTAGES SECTION    -->
     <section class="advantages">
         <div class="container">
-        <h2 class="advantages__title">Почему покупка дома - выгодней, чем покупка квартиры?</h2>
-        <div class="advantages__items">
-            <div class="advantages-item">
-                <div class="advantages-item__image">
-                    <img src="src/image/advantages/1.svg" alt="Индивидуальный проект">
+            <h2 class="advantages__title">Почему покупка дома - выгодней, чем покупка квартиры?</h2>
+            <div class="advantages__items">
+                <div class="advantages-item">
+                    <div class="advantages-item__image">
+                        <img src="src/image/advantages/1.svg" alt="Индивидуальный проект">
+                    </div>
+                    <p class="advantages-item__description">Индивидуальный проект</p>
                 </div>
-                <p class="advantages-item__description">Индивидуальный проект</p>
-            </div>
-            <div class="advantages-item">
-                <div class="advantages-item__image">
-                    <img src="src/image/advantages/2.svg" alt="Фиксированная стоимость строительства">
+                <div class="advantages-item">
+                    <div class="advantages-item__image">
+                        <img src="src/image/advantages/2.svg" alt="Фиксированная стоимость строительства">
+                    </div>
+                    <p class="advantages-item__description">Фиксированная стоимость строительства</p>
                 </div>
-                <p class="advantages-item__description">Фиксированная стоимость строительства</p>
-            </div>
-            <div class="advantages-item">
-                <div class="advantages-item__image">
-                    <img src="src/image/advantages/3.svg" alt="Комплектация домов с коммуникациями">
+                <div class="advantages-item">
+                    <div class="advantages-item__image">
+                        <img src="src/image/advantages/3.svg" alt="Комплектация домов с коммуникациями">
+                    </div>
+                    <p class="advantages-item__description">Комплектация домов с коммуникациями</p>
                 </div>
-                <p class="advantages-item__description">Комплектация домов с коммуникациями</p>
-            </div>
-            <div class="advantages-item">
-                <div class="advantages-item__image">
-                    <img src="src/image/advantages/4.svg" alt="Государственные программы">
+                <div class="advantages-item">
+                    <div class="advantages-item__image">
+                        <img src="src/image/advantages/4.svg" alt="Государственные программы">
+                    </div>
+                    <p class="advantages-item__description">Государственные программы</p>
                 </div>
-                <p class="advantages-item__description">Государственные программы</p>
-            </div>
-            <div class="advantages-item">
-                <div class="advantages-item__image">
-                    <img src="src/image/advantages/5.svg" alt="Гарантия на дом 5 лет, на кровлю 7 лет">
+                <div class="advantages-item">
+                    <div class="advantages-item__image">
+                        <img src="src/image/advantages/5.svg" alt="Гарантия на дом 5 лет, на кровлю 7 лет">
+                    </div>
+                    <p class="advantages-item__description">Гарантия на дом 5 лет, на кровлю 7 лет</p>
                 </div>
-                <p class="advantages-item__description">Гарантия на дом 5 лет, на кровлю 7 лет</p>
             </div>
-        </div>
         </div>
     </section>
     <!--    PROJECTS SECTION    -->
@@ -399,15 +399,15 @@
                 <p class="building-buttons__button-subtitle">Дома</p>
             </div>
             <div class="building-buttons__button" data-id="5">
-            <div class="building-buttons__button-image">
-                <img src="./src/image/building/garage.svg" alt="Гараж">
-            </div>
+                <div class="building-buttons__button-image">
+                    <img src="./src/image/building/garage.svg" alt="Гараж">
+                </div>
                 <p class="building-buttons__button-subtitle">Гаражи</p>
             </div>
             <div class="building-buttons__button" data-id="6">
-            <div class="building-buttons__button-image">
-                <img src="./src/image/building/bath.svg" alt="Баня">
-            </div>
+                <div class="building-buttons__button-image">
+                    <img src="./src/image/building/bath.svg" alt="Баня">
+                </div>
                 <p class="building-buttons__button-subtitle">Бани</p>
             </div>
         </div>
@@ -425,13 +425,13 @@
     </section>
     <section class="progress">
         <h2 class="progress__title">Ход строительства</h2>
-            <ul class="progress-tabs">
-                <li class="progress-tabs__tab" data-id="7">Фундамент</li>
-                <li class="progress-tabs__tab active" data-id="8">Сборка и Монтаж дома</li>
-                <li class="progress-tabs__tab" data-id="9">Инженерные системы</li>
-                <li class="progress-tabs__tab" data-id="10">Отделка</li>
-                <li class="progress-tabs__tab" data-id="11">Отзыв клиента</li>
-            </ul>
+        <ul class="progress-tabs">
+            <li class="progress-tabs__tab" data-id="7">Фундамент</li>
+            <li class="progress-tabs__tab active" data-id="8">Сборка и Монтаж дома</li>
+            <li class="progress-tabs__tab" data-id="9">Инженерные системы</li>
+            <li class="progress-tabs__tab" data-id="10">Отделка</li>
+            <li class="progress-tabs__tab" data-id="11">Отзыв клиента</li>
+        </ul>
         <div class="progress-content">
             <img src="./src/image/progress/foundation.png" alt="Фундамент" class="progress-content__image">
         </div>
@@ -448,53 +448,63 @@
             <img src="./src/image/progress/feedbackVideo.png" alt="Отзыв клиента" class="progress-content__image">
         </div>
     </section>
-<!--    QUIZ SECTION CONTAINER   -->
+    <!--    QUIZ SECTION CONTAINER   -->
     <section class="quiz container">
         <h5 class="quiz__subtitle">Пройдите бесплатный тест-калькулятор</h5>
         <h2 class="quiz__title">Получите предварительный расчет стоимости дома за 1 минуту</h2>
-<!--        QUIZ       -->
+        <!--        QUIZ       -->
         <div class="quiz-calculator" id="quiz">
             <div class="quiz-questions">
                 <div class="quiz-questions-item">
                     <h3 class="quiz-questions-item__question">Какой дом вы хотите построить?</h3>
                     <div class="quiz-questions-item__answers">
-                            <label>
-                                <img  src="./src/image/quiz/firstQ/block.png" alt="">
-                                <input type="radio" name="q1" class="radio">
-                                <div class="custom-radio__button"></div>
-                                <p>Дом из блоков</p>
-                            </label>
-                            <label>
-                                <img src="./src/image/quiz/firstQ/carcass.png" alt="">
-                                    <input type="radio" name="q1"  class="radio">
-                                    <div class="custom-radio__button"></div>
-                                <p>Каркасный дом</p>
-                            </label>
-                            <label>
-                                <img src="./src/image/quiz/firstQ/brick.png" alt="">
-                                    <input type="radio" name="q1" class="radio">
-                                    <div class="custom-radio__button"></div>
-                                <p>Кирпичный дом</p>
-                            </label>
-                            <label>
-                                <img src="./src/image/quiz/firstQ/beam.png" alt="">
-                                    <input type="radio" name="q1" class="radio">
-                                    <div class="custom-radio__button"></div>
-                                <p>Дом из профилированного бруса</p>
-                            </label>
-                            <label>
-                                <img src="./src/image/quiz/firstQ/celinder.png" alt="">
-                                    <input type="radio" name="q1" class="radio">
-                                    <div class="custom-radio__button"></div>
-                                <p>Дом из цилиндрированного бруса</p>
-                            </label>
-                            <label>
-                                <img src="./src/image/quiz/firstQ/sip.png" alt="">
-                                    <input type="radio" name="q1" class="radio">
-                                    <div class="custom-radio__button"></div>
-                                <p>Дом из SIP-панелей</p>
-                            </label>
+                        <label>
+                            <img src="./src/image/quiz/firstQ/block.png" alt="">
+                            <input type="radio" name="q1" class="radio">
+                            <div class="custom-radio__button"></div>
+                            <p>Дом из блоков</p>
+                        </label>
+                        <label>
+                            <img src="./src/image/quiz/firstQ/carcass.png" alt="">
+                            <input type="radio" name="q1" class="radio">
+                            <div class="custom-radio__button"></div>
+                            <p>Каркасный дом</p>
+                        </label>
+                        <label>
+                            <img src="./src/image/quiz/firstQ/brick.png" alt="">
+                            <input type="radio" name="q1" class="radio">
+                            <div class="custom-radio__button"></div>
+                            <p>Кирпичный дом</p>
+                        </label>
+                        <label>
+                            <img src="./src/image/quiz/firstQ/beam.png" alt="">
+                            <input type="radio" name="q1" class="radio">
+                            <div class="custom-radio__button"></div>
+                            <p>Дом из профилированного бруса</p>
+                        </label>
+                        <label>
+                            <img src="./src/image/quiz/firstQ/celinder.png" alt="">
+                            <input type="radio" name="q1" class="radio">
+                            <div class="custom-radio__button"></div>
+                            <p>Дом из цилиндрированного бруса</p>
+                        </label>
+                        <label>
+                            <img src="./src/image/quiz/firstQ/sip.png" alt="">
+                            <input type="radio" name="q1" class="radio">
+                            <div class="custom-radio__button"></div>
+                            <p>Дом из SIP-панелей</p>
+                        </label>
                     </div>
+                </div>
+            </div>
+            <div class="quiz-calculator__progress">
+                <div class="quiz-calculator__progress-value"></div>
+            </div>
+            <div class="quiz-calculator__next">
+                <div class="quiz-calculator__next-count">01 / 07</div>
+                <div class="quiz-calculator__next-button">
+                    <span>Далее</span>
+                    <img src="./src/image/svg/arrow-right.svg">
                 </div>
             </div>
         </div>
