add: messenger data push

--- a/index.html
+++ b/index.html
@@ -517,19 +517,19 @@
 
                 <div class="quiz-feedback-form__buttons">
                     <label>
-                        <input type="radio" name="q1" class="form-radio">
+                        <input type="radio" name="messenger" value="telegram" class="form-radio">
                         <div class="custom-radio__form-button"></div>
                         <img src="/src/image/quiz/form/telegram.svg" alt="">
                         <p>Telegram</p>
                     </label>
                     <label>
-                        <input type="radio" name="q1" class="form-radio">
+                        <input type="radio" name="messenger" value="viber" class="form-radio">
                         <div class="custom-radio__form-button"></div>
                         <img src="/src/image/quiz/form/viber.svg" alt="">
                         <p>Viber</p>
                     </label>
                     <label>
-                        <input type="radio" name="q1" class="form-radio">
+                        <input type="radio" name="messenger" value="whatsApp" class="form-radio">
                         <div class="custom-radio__form-button"></div>
                         <img src="/src/image/quiz/form/whatsApp.svg" alt="">
                         <p>What's App</p>
