--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
             </div>
 
 
-            <form class="quiz-feedback-form" id="feedback-form">
+            <form class="quiz-feedback-form" id="feedback-form" onsubmit="return false;">
                 <h2 class="quiz-feedback-form__title">Мы получили данные и приступаем к расчетам</h2>
                 <p class="quiz-feedback-form__subtitle">Укажите куда выслать расчет стоимости?</p>
 
@@ -540,13 +540,13 @@
                         <input type="text" placeholder="Ваше имя" required>
                     </label>
                     <label>
-                        <input type="number" placeholder="Телефон" required>
+                        <input id="telephone" type="tel" placeholder="Телефон" required>
                     </label>
                     <label>
                         <input type="email" placeholder="Электронная почта (не обязательно)">
                     </label>
                 </div>
-                <button type="submit" class="quiz-feedback-form__submit-button">
+                <button onclick="sub()" class="quiz-feedback-form__submit-button">
                     <img src="./src/image/svg/arrow-right.svg" alt="arrow">
                     <span>Оставить заявку</span>
                 </button>
