--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                     <div class="quiz-calculator__next-count" id="count"></div>
                     <button class="quiz-calculator__next-button" id="next-button" disabled>
                         <span class="x">Далее</span>
-                        <img class="y" src="./src/image/svg/arrow-right.svg">
+                        <img class="y" src="./src/image/svg/arrow-right.svg" alt="Далее">
                     </button>
                 </div>
             </div>
@@ -519,19 +519,19 @@
                     <label>
                         <input type="radio" name="messenger" value="telegram" class="form-radio">
                         <div class="custom-radio__form-button"></div>
-                        <img src="/src/image/quiz/form/telegram.svg" alt="">
+                        <img src="/src/image/quiz/form/telegram.svg" alt="Telegram">
                         <p>Telegram</p>
                     </label>
                     <label>
                         <input type="radio" name="messenger" value="viber" class="form-radio">
                         <div class="custom-radio__form-button"></div>
-                        <img src="/src/image/quiz/form/viber.svg" alt="">
+                        <img src="/src/image/quiz/form/viber.svg" alt="Viber">
                         <p>Viber</p>
                     </label>
                     <label>
                         <input type="radio" name="messenger" value="whatsApp" class="form-radio">
                         <div class="custom-radio__form-button"></div>
-                        <img src="/src/image/quiz/form/whatsApp.svg" alt="">
+                        <img src="/src/image/quiz/form/whatsApp.svg" alt="What's App">
                         <p>What's App</p>
                     </label>
                 </div>
@@ -547,7 +547,7 @@
                     </label>
                 </div>
                 <button onclick="sub()" class="quiz-feedback-form__submit-button">
-                    <img src="./src/image/svg/arrow-right.svg" alt="arrow">
+                    <img src="./src/image/svg/arrow-right.svg" alt="Отправить">
                     <span>Оставить заявку</span>
                 </button>
                 <p>Нажимая на кнопку, вы соглашаетесь с условиями политики конфиденциальности и обработки персональных данных</p>
