--- a/index.html
+++ b/index.html
@@ -45,17 +45,6 @@
                          xmlns:xlink="http://www.w3.org/1999/xlink">
                         <defs>
                             <path d="M6,114a108,108 0 1,0 216,0a108,108 0 1,0 -216,0" id="textcircle"/>
-                            <!--                            Вынести стили в css-->
-                            <style>
-                                text {
-                                    font-size: 12px;
-                                    font-family: Franklin Gothic, sans-serif;
-                                    font-weight: 200;
-                                    fill: white;
-                                    text-transform: uppercase;
-                                    letter-spacing: 10px;
-                                }
-                            </style>
                         </defs>
                         <text>
                             <textPath xlink:href="#textcircle">
@@ -68,6 +57,8 @@
         </div>
     </header>
     <section class="about">
+        <div class="about-wrapper">
+
         <span class="about-label">ЭкоДом</span>
         <!--        <div class="tab-wrapper">-->
         <div class="about-tabs">
@@ -117,10 +108,11 @@
                 </ul>
             </div>
         </div>
+        </div>
         <!--        </div>-->
     </section>
     <!--    ADVANTAGES SECTION    -->
-    <section class="advantages">
+    <section class="advantages container">
         <div class="container">
             <h2 class="advantages__title">Почему покупка дома - выгодней, чем покупка квартиры?</h2>
             <div class="advantages__items">
@@ -158,7 +150,7 @@
         </div>
     </section>
     <!--    PROJECTS SECTION    -->
-    <section class="projects">
+    <section class="projects container">
         <h2 class="projects__title">Наши проекты</h2>
         <div class="swiper">
             <div class="swiper-wrapper">
@@ -186,6 +178,7 @@
                                 <p>Размер: 12x12</p>
                             </div>
                         </div>
+                        <hr class="slide-inner__price-border"/>
                         <div class="slide-inner__price">
                             <div class="slide-inner__price-description">
                                 <p class="price-description__title">Стоимость работ</p>
@@ -222,6 +215,7 @@
                                 <p>Размер: 12x12</p>
                             </div>
                         </div>
+                        <hr class="slide-inner__price-border"/>
                         <div class="slide-inner__price">
                             <div class="slide-inner__price-description">
                                 <p class="price-description__title">Стоимость работ</p>
@@ -258,6 +252,7 @@
                                 <p>Размер: 12x12</p>
                             </div>
                         </div>
+                        <hr class="slide-inner__price-border"/>
                         <div class="slide-inner__price">
                             <div class="slide-inner__price-description">
                                 <p class="price-description__title">Стоимость работ</p>
@@ -294,6 +289,7 @@
                                 <p>Размер: 12x12</p>
                             </div>
                         </div>
+                        <hr class="slide-inner__price-border"/>
                         <div class="slide-inner__price">
                             <div class="slide-inner__price-description">
                                 <p class="price-description__title">Стоимость работ</p>
@@ -330,6 +326,7 @@
                                 <p>Размер: 12x12</p>
                             </div>
                         </div>
+                        <hr class="slide-inner__price-border"/>
                         <div class="slide-inner__price">
                             <div class="slide-inner__price-description">
                                 <p class="price-description__title">Стоимость работ</p>
@@ -366,6 +363,7 @@
                                 <p>Размер: 12x12</p>
                             </div>
                         </div>
+                        <hr class="slide-inner__price-border"/>
                         <div class="slide-inner__price">
                             <div class="slide-inner__price-description">
                                 <p class="price-description__title">Стоимость работ</p>
@@ -602,7 +600,9 @@
                 <h5 class="footer-links-column__link">Наши работы</h5>
             </div>
         </div>
+
         <div class="footer-bottom__wrapper container">
+            <hr class="footer-border"/>
             <div class="footer-contacts">
                 <h4 class="footer-contacts__title">ЭкоДом</h4>
                 <a href="tel:+7474242424" class="footer-contacts__phone">+7 (474) 24 24 24</a>
@@ -631,9 +631,6 @@
             </div>
             <div class="footer-label"></div>
         </div>
-
-
-
     </footer>
 </div>
 
