add: play buttons on all videos

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="about-wrapper">
 
         <span class="about-label">ЭкоДом</span>
-        <!--        <div class="tab-wrapper">-->
+
         <div class="about-tabs">
             <ul>
                 <li class="about-tabs__tab active" data-id="1">О компании</li>
@@ -71,7 +71,9 @@
         <div class="about-content active">
             <div class="about-content__about-title">Липецкая компания "ЭкоДом"</div>
             <div class="about-content__about-description">
-                <img class="about-content__about-video" src="src/image/video/video.png" alt="video house">
+                <div class="about-video__wrapper">
+                    <img class="about-content__about-video" src="src/image/svg/play.svg" alt="video house">
+                </div>
                 <p>В зависимости от пожеланий клиентов, мы можем построить дом любой сложности как по уже готовым,
                     так и по индивидуальным проектам, разработку которых наши специалисты также предоставляют.
                 </p>
@@ -417,7 +419,7 @@
                 <p>Мы под ваш бюджет построим: Дом, баню и так далее</p>
             </div>
             <div class="building-content__video">
-                <img src="./src/image/building/video.png" alt="house video">
+                <img src="./src/image/svg/play.svg" alt="house video">
             </div>
         </div>
     </section>
